# readme-ai

./: README.md  pyproject.toml
readme-ai/: LICENSE  README.md  requirements.txt
readme-ai/readme_ai/: __init__.py  cli.py  fetcher.py  utils.py
readme_ai/: analyzer.py  generator.py
